[gd_scene load_steps=5 format=3 uid="uid://c6cmb28yfv6ll"]

[ext_resource type="Script" uid="uid://cxcsvl70sn3cn" path="res://scripts/core/game_manager.gd" id="1_game_manager"]
[ext_resource type="Script" uid="uid://cqy7gjifllxk5" path="res://scripts/ui/main_ui.gd" id="2_main_ui"]
[ext_resource type="Script" uid="uid://bub6oy0nm4w0j" path="res://scripts/map/game_map.gd" id="3_game_map"]
[ext_resource type="Script" uid="uid://dur0wxo4mtwx4" path="res://scripts/utils/camera_controller.gd" id="4_camera_controller"]

[node name="Main" type="Node"]
script = ExtResource("1_game_manager")

[node name="GameMap" type="Node3D" parent="."]
script = ExtResource("3_game_map")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_main_ui")

[node name="MapViewport" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/MapViewport"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="World" type="Node3D" parent="UI/MapViewport/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="UI/MapViewport/SubViewport/World"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 26, 28, 15)
script = ExtResource("4_camera_controller")

[node name="SpriteStatusPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -10.0
grow_vertical = 0

[node name="HandCardArea" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnergyLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "能量: 0/5"

[node name="BountyLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 0
text = "赏金: 未持有"

[node name="TurnTimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 90.0
offset_right = -10.0
offset_bottom = 120.0
grow_horizontal = 0
text = "剩余时间: 30秒"
